# py-macstrap

./: .gitignore  README.md  pyproject.toml
examples/: README.md
examples/ai-cli/: packages-brew.txt  packages-macports.txt  packages-npm-global.txt
examples/openclaw/: packages-brew-casks.txt  packages-npm-global.txt
examples/php8.3-dev/: packages-macports.txt
src/macstrap/: __init__.py  cli.py
src/macstrap/ansible/: __init__.py  ansible.cfg  playbook.yml
src/macstrap/ansible/roles/docker_desktop/tasks/: main.yml
src/macstrap/ansible/roles/homebrew/defaults/: main.yml
src/macstrap/ansible/roles/homebrew/tasks/: main.yml
src/macstrap/ansible/roles/macports/defaults/: main.yml
src/macstrap/ansible/roles/macports/tasks/: main.yml
src/macstrap/ansible/roles/nvm/defaults/: main.yml
src/macstrap/ansible/roles/nvm/tasks/: main.yml
src/macstrap/ansible/roles/openjdk/defaults/: main.yml
src/macstrap/ansible/roles/openjdk/tasks/: main.yml
src/macstrap/ansible/roles/pip_global/tasks/: main.yml
src/macstrap/ansible/roles/shell/defaults/: main.yml
src/macstrap/ansible/roles/shell/tasks/: main.yml
src/macstrap/ansible/roles/shell/templates/: zshrc.j2
src/macstrap/ansible/roles/xcode_cli/tasks/: main.yml
src/macstrap/commands/: __init__.py  hosts.py  init.py  run.py  ssh_auth.py  verify.py
src/macstrap/example_configs/ai-cli/: packages-brew-casks.txt  packages-pip-global.txt
src/macstrap/example_configs/openclaw/: packages-brew.txt  packages-npm-global.txt
src/macstrap/example_configs/utilities-dev/: packages-brew-casks.txt  packages-brew.txt  packages-macports.txt  packages-npm-global.txt  packages-pip-global.txt
src/macstrap/store/: __init__.py  base.py  filesystem.py  keychain.py
tests/: test_store_filesystem.py
